2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Generator.cs: 
	* GlobalInfo.cs:
	* MemberInfo.cs:
	* MethodInfo.cs:
	* ParameterInfo.cs:
	* SignatureType.cs:
	* TypeReference.cs: Don't include C++ headers in cbinding.h.

2009-05-16  Alan McGovern  <amcgovern@novell.com>

	* TypeReference.cs: Add type converting to ObjectKeyFrame. The
	  conversion is done during the Resolve phase. If the type
	  conversion can't be completed an exception is thrown.

2009-05-18  Chris Toshok  <toshok@ximian.com>

	* Generator.cs (GenerateDPs): is_nullable => is_full.  this was
	causing all animation properties (and a few others) to show up as
	non-nullable.  Fixes drt #113 and #114.

2009-05-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Generator.cs: Allow arrays with constant size in
	parameters.

2009-05-09  Andreia Gaita  <avidigal@novell.com>

	* Generator.cs: Add GenerateJSBindings.
	Generates plugin-class.h and plugin-class.g.cpp

	* GlobalInfo.cs: Add JSMethodsToBind.
	Returns all entries marked with GenerateJSBinding annotation

	* MethodInfo.cs: Add ToString helper method.

	* TypeReference.cs: Add GetNPType helper method.
	Returns the NP type, to help generate argument checking code.

2009-05-03  Chris Toshok  <toshok@ximian.com>

	* TypeReference.cs:
	s/NativePropertyChangeHandler/UnmanagedPropertyChangeHandler.

2009-05-01  Larry Ewing  <lewing@novell.com>

	* Generator.cs: Generate the As* accessors with a default
	argument.
	
2009-04-28  Geoff Norton  <gnorton@novell.com>

	* Generator.cs: Modify the default IntPtr ctor to denote 
	wether we've being created in managed and need to retain a ref
	or not.

2009-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Generator.cs:
	* ParameterInfo.cs: Add support for specifying @MarshalAs,
	  IsRef and IsOut on parameters. Marshal gbooleans better.
	  Don't handle Surface* parameters automatically.

	* TypeReference.cs: Added a bunch of new types.

2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>
