@@ -1,3 +1,9 @@
+2009-05-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Generator.cs:
+	* FieldInfo.cs: Don't throw away annotations on enums,
+	and store the enum value (if any) properly.
+
 2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* Generator.cs: 
